# PaperForge

./: .env.example  .gitignore  README.md  docker-compose.yml
server/: alembic.ini  migrate.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: main.py
server/app/api/: __init__.py  dependencies.py  limiter.py  middleware.py  router.py
server/app/api/routes/: auth.py  chat.py  documents.py  health.py  notes.py  timeline.py  workspace.py
server/app/api/schemas/: auth.py  common.py  requests.py  responses.py
server/app/api/v1/: router.py
server/app/application/chat/: __init__.py  send_message.py
server/app/application/documents/: __init__.py  process_document.py  upload_document.py
server/app/application/services/: rag_pipeline_service.py
server/app/core/: config.py  firebase.py  logging.py  security.py
server/app/domain/: __init__.py  exceptions.py
server/app/domain/entities/: __init__.py  chunk.py  citation.py  collection.py  conversation.py  document.py  embedding_result.py  generation.py  metadata_filter.py  rag.py  research_note.py  retrieval.py  timeline_event.py  user.py  vector_store_result.py  workspace_settings.py
server/app/domain/models/: user.py
server/app/domain/services/: llm_provider.py  (+16 more)
server/app/infrastructure/: __init__.py
server/tests/: conftest.py  test_api_v1.py  test_chunking_service.py  test_citation_service.py  test_embedding_service.py  test_generation_service.py  test_rag_pipeline_service.py  test_retrieval_service.py  test_vector_store_service.py
(+81 files in other folders)
